--- a/éles/style.css
+++ b/éles/style.css
@@ -1,4 +1,3 @@
-/* Alapbeállítások */
 * {
     margin: 0;
     padding: 0;
@@ -22,6 +21,10 @@ section {
 }
 
 .tablazat {
+    /* ez miatt nem lehet kijelolni a tablazatot */
+    /* Testnel kommentezd */
+    user-select: none;
+    border: 1;
     width: 100%;
     background: #FFF8F0;
     border-collapse: separate;
@@ -29,7 +32,7 @@ section {
     border-radius: 16px;
     overflow: hidden;
     box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
-    table-layout: fixed; /* hogy FIX mérete legyen */
+    table-layout: fixed; 
 }
 
 .tablazat td {
@@ -37,8 +40,8 @@ section {
     height: 50px;
     padding: 0;
     text-align: center;
-    vertical-align: middle; /* függőleges */
-    font-size: 20px; /* emoji és szám mérete */
+    vertical-align: middle; 
+    font-size: 20px; 
     font-weight: 500;
     color: #6B5444;
     background: #FFFBF7;
@@ -168,8 +171,39 @@ section {
     padding: 10px;
 }
 
+.gamemodeSelector button {
+    background-color: #4CAF50; 
+    color: white;              
+    border: none;              
+    padding: 8px 16px;         
+    margin: 5px;               
+    border-radius: 4px;        
+    cursor: pointer;           
+    font-size: 14px;           
+    transition: background 0.2s; 
+}
+
+.gamemodeSelector button:hover {
+    background-color: #770505; 
+}
 
 button.active {
   background-color: red;
   color: white;
+}
+
+
+#restartBtn {
+    background-color: #2196F3;  
+    color: white;               
+    border: none;               
+    padding: 8px 16px;          
+    border-radius: 4px;         
+    cursor: pointer;            
+    font-size: 14px;            
+    transition: background 0.2s; 
+}
+
+#restartBtn:hover {
+    background-color: #1976D2;  
 }
